service.yml
apiVersion: v1
kind: Service
metadata:
  name: teta-service
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: teta-app
